@@ -10,7 +10,7 @@
     <meta name="generator" content="Seagull Framework v{versionAPI}" />
     <link rel="icon" type="image/gif" href="{webRoot}/themes/{theme}/images/favicon.gif" />
     <link rel="help" href="http://trac.seagullproject.org" title="Seagull Documentation." />
-    <link rel="stylesheet" type="text/css" href="{webRoot}/themes/{theme}/css/style.php?navStylesheet=adminMenu_vertical&amp;moduleName={moduleName}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{webRoot}/themes/{theme}/css/style.php?navStylesheet=adminMenu_vertical&amp;moduleName={moduleName}" />
 
     {scriptOpen:h}
         var SGL_JS_WEBROOT="{webRoot}";
