@@ -14,9 +14,7 @@
     <meta name="Generator" content="Seagull Framework v{versionAPI}" />
     <link rel="help" href="http://seagull.phpkitchen.com/docs/" title="Seagull Documentation." />
 
-    <style type="text/css" media="screen">
-        @import url("{$result->webRoot}/themes/{$result->theme}/css/style.php?navStylesheet={$result->conf.navigation.stylesheet}&moduleName={$result->moduleName}");
-    </style>
+    <link rel="stylesheet" type="text/css" media="screen" href="{$result->webRoot}/themes/{$result->theme}/css/style.php?navStylesheet={$result->conf.navigation.stylesheet}&amp;moduleName={$result->moduleName}" />
 
     <script type="text/javascript">
         var SGL_JS_WEBROOT="{$result->webRoot}";
